infra/networking/gateway-config/gateway.yaml
# GatewayClass
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-gateway-dualstack
    namespace: envoy-gateway-system
---
# Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: kouidri-fr-tls
      allowedRoutes:
        namespaces:
          from: All
---
# Redirection HTTP -> HTTPS for all HTTP listners
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-filter-redirect
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
# Redirection https://kouidri.me -> https://kouidri.fr
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kouidri-me-redirect
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: envoy-gateway
      sectionName: https
      namespace: envoy-gateway-system
  hostnames:
    - "kouidri.me"
    - "www.kouidri.me"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: kouidri.fr
            statusCode: 301
